Clase 3: Se conecto el front con el backend de forma mas optima y se agrego un time out

--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -22,7 +22,7 @@
 
 
         <div class="mb-3">
-          <select id="tipodocumento" name="tipodocumento"
+          <select id="tipoDocumento" name="tipoDocumento"
                   class="form-select form-select-lg">
             <option selected>Tipo de Documento</option>
             <option value="1">DNI</option>
@@ -32,7 +32,7 @@
         </div>
 
         <div class="mb-3">
-          <input type="text" name="numerodocumento" id="numerodocumento"
+          <input type="text" name="numeroDocumento" id="numeroDocumento"
                  placeholder="Número documento" class="form-control form-control-lg">
         </div>
 
